Prevented content from flickering in the wrong places during page load.
*   www/dyphal.js: Ensure that photo and album stylesheets are loaded
    before loading any content.  Hide all content while swapping
    stylesheets.  This should prevent things from flickering in the
    wrong places while loading.

*   www/common.css: Removed an unnecessary property.

*   tools/gthumb-comment-update.py, tools/photorename.sh: Cleaned up
    some blank lines.

*   tools/photorename.sh: Header text.

--- a/www/photo.css
+++ b/www/photo.css
@@ -98,7 +98,6 @@ img.vnavigation {
 
 #photo {
   border: 3px solid black;
-  visibility: hidden;
   vertical-align: middle;
 }
 
